--- a/cart/cart.html
+++ b/cart/cart.html
@@ -15,7 +15,7 @@
         <thead>
         <tr>
             <td>序号：</td>
-            <td>商品名称</td>
+            <td>商品名称123:</td>
             <td>单价</td>
             <td>数量</td>
         </tr>
