--- a/vue/vue.html
+++ b/vue/vue.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Vue</title>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <link rel="stylesheet" href="vue.css">
+    <link rel="stylesheet" href="vue.css" type="text/css">
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -30,7 +30,11 @@
     <input type="text" v-model="watches">
     <label class="class1" id="watch02"> </label>
     <p v-if="use">{{ msg }}</p>
-
+	<button @click="show=!show">Toggle</button>
+	<transition name="bounce">
+		
+		<p v-if="show" style="width: 5rem; border: #444444 0.0625rem solid ;">hello</p>
+	</transition>
 </div>
 <script src="vue.js"></script>
 </body>
