--- a/Animejs/demo-02/Animejs.html
+++ b/Animejs/demo-02/Animejs.html
@@ -21,7 +21,7 @@
 				<div>A</div>
 			</div>
 			<div>
-				<li v-for=""></li>
+				<li v-for="item in list">{{item}}</li>
 			</div>
 			<transition v-on:enter="enter">
 					<div class="ball" v-show="position.show" id="ball"></div>
